@@ -11,6 +11,7 @@ Release CMTK-1.0.3:
     command line to stdout before continuing with the program.
 - Added: the "levelset" and "film" tools now fully support the Slicer3
     execution model. Support in "mrbias" tool has also been improved.
+- Added: new "asegment" tool for atlas-based segmentation
 
 Release CMTK-1.0.2 (2009-07-24):
 
